--- a/README
+++ b/README
@@ -2,9 +2,7 @@ README
 ======
 Authors
 -------
-Alexandre Nanchen <alexandre.nanchen@idiap.ch>
-Christine Marcel <christine.marcel@idiap.ch>
-Renato Martins
+Alexandre Nanchen,Christine Marcel and Renato Martins
 
 Description
 -----------
